// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backups backups work 1`] = `
Array [
  Object {
    "date": "2017-01-01",
    "id": "backup1",
  },
  Object {
    "date": "2017-01-01",
    "id": "backup2",
  },
  Object {
    "date": "2017-01-01",
    "id": "backup3",
  },
]
`;

exports[`Backups backups work 2`] = `
Array [
  Object {
    "date": "2017-01-01",
    "id": "backup1",
  },
  Object {
    "date": "2017-01-01",
    "id": "backup2",
  },
  Object {
    "date": "2016-12-30",
    "id": "backup3",
  },
  Object {
    "date": "2016-12-29",
    "id": "backup4",
  },
]
`;

exports[`Backups backups work 3`] = `
Array [
  Object {
    "date": "2017-01-01",
    "id": "backup1",
  },
  Object {
    "date": "2017-01-01",
    "id": "backup2",
  },
  Object {
    "date": "2016-12-29",
    "id": "backup3",
  },
]
`;

exports[`Backups backups work 4`] = `
Array [
  Object {
    "date": "2017-01-01",
    "id": "backup1",
  },
  Object {
    "date": "2017-01-01",
    "id": "backup2",
  },
  Object {
    "date": "2016-12-29",
    "id": "backup3",
  },
  Object {
    "date": "2016-12-28",
    "id": "backup4",
  },
  Object {
    "date": "2016-12-27",
    "id": "backup5",
  },
  Object {
    "date": "2016-12-26",
    "id": "backup6",
  },
  Object {
    "date": "2016-12-25",
    "id": "backup7",
  },
  Object {
    "date": "2016-12-24",
    "id": "backup8",
  },
  Object {
    "date": "2016-12-23",
    "id": "backup9",
  },
  Object {
    "date": "2016-12-22",
    "id": "backup10",
  },
]
`;
